#
# Copyright (C) 2025 Kian Kasad <kian@kasad.com>
#
# This file is part of Leave.
#
# Leave is free software: you can redistribute it and/or modify it under the
# terms of the GNU General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later
# version.
#
# Leave is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
# PARTICULAR PURPOSE. See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with
# Leave. If not, see <https://www.gnu.org/licenses/>.
#

[package]
name = "leave"
version = "0.1.0"
description = "Inverted rm(1) command - Remove everything except the given files"
repository = "https://github.com/kdkasad/leave"
authors = ["Kian Kasad <kian@kasad.com>"]
categories = ["command-line-utilities"]
license = "GPL-3.0-or-later"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
eyre = "0.6.12"

[dev-dependencies]
pretty_assertions = "1.4.1"
serde_json = "1.0.145"
tempfile = "3.23.0"
